[tool.poetry]
name = "preview-generator"
version = "0.1.0"
description = ""
authors = ["Vladimir Levin <opaozhub@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
pgen = "preview_generator.main:app"

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^9.0.1"
typer = { extras = ["all"], version = "^0.4.0" }
click = "8.0.4"
requests = "^2.27.1"
ratelimiter = "^1.2.0"
colour = "^0.1.5"
numpy = "^1.22.3"
PyYAML = "^6.0"
joblib = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
